--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   app:
@@ -7,12 +7,15 @@ services:
       - "8000:8000"
     env_file:
       - .env
-    depends_on:
-      - mongo
+    # depends_on:
+    #   - mongo
     volumes:
-      - ./:
+      - type: bind
+        source: ./
+        target: /app
+    working_dir: /app
 
-  mongo:
-    image: mongo
-    ports:
-      - "27017:27017"
+  # mongo:
+  #   image: mongo
+  #   ports:
+  #     - "27017:27017"
